<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/mostra_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mostra_menu_button" />

    <TextView
        android:id="@+id/tipo_cucina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cucina" />

    <TextView
        android:id="@+id/orario_apertura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/orario_apertura" />

    <TextView
        android:id="@+id/orario_chiusura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/orario_chiusira" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/numero_coperti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero_coperti_disponibili" />

        <Button
            android:id="@+id/prenota_ristorante_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenota_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/prenota_ristorante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <CalendarView
            android:id="@+id/data_prenotazione_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calendar_background"
            android:focusedMonthDateColor="@color/dark_purple" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/ora_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp" />

            <Spinner
                android:id="@+id/minuto_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/numero_prenotati_attrazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numero_di_persone_hint"
            android:inputType="number"
            android:padding="15dp" />

        <Button
            android:id="@+id/conferma_prenotazione_ristorante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conferma_button" />

    </LinearLayout>

</LinearLayout>