<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/visualizza_attrazione_immagine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/attrazione_rating_bar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:numStars="5" />

                <TextView
                    android:id="@+id/visualizza_attrazione_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/visualizza_attazione_nome_text" />

                <TextView
                    android:id="@+id/visualizza_attrazione_tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/visualizza_attazione_categoria_text" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/visualizza_attrazione_descrizione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/default_card_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/visualizza_attrazione_indirizzo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualizza_attazione_indirizzo_text"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/visualizza_attrazione_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualizza_attazione_numero_di_telefono_text"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/visualizza_attrazione_prezzo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualizza_attazione_prezzo_medio_text"
                android:padding="5dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/recensioni_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recensioni_button" />

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

        </FrameLayout>
    </LinearLayout>
</ScrollView>