<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/luogo_prenotazione_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/luogo_prenotazione_card"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/gold"/>

        <TextView
            android:id="@+id/id_transazione_prenotazione_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_transazione_prenotazione_card"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/gold"/>

        <TextView
            android:id="@+id/data_e_ora_prenotazione_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_e_ora_prenotazione_card"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/gold"/>

        <TextView
            android:id="@+id/numero_prenotati_prenotazione_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_prenotati_prenotazione_card"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/gold"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>