<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/contatti_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="30dp"
        android:text="@string/contatti_title"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/contatti_mail_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contatti_mail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="15dp"
        android:text="@string/contatti_mail1"
        app:layout_constraintBottom_toTopOf="@+id/contatti_mail2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatti_mail_title" />

    <TextView
        android:id="@+id/contatti_mail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="30dp"
        android:text="@string/contatti_mail2"
        app:layout_constraintBottom_toTopOf="@+id/contatti_phone_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatti_mail1" />

    <TextView
        android:id="@+id/contatti_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="50dp"
        android:text="@string/contatti_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatti_phone_title" />

    <TextView
        android:id="@+id/contatti_mail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="10dp"
        android:text="@string/contatti_mail_title"
        app:layout_constraintBottom_toTopOf="@+id/contatti_mail1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatti_title" />

    <TextView
        android:id="@+id/contatti_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="10dp"
        android:text="@string/contatti_phone_title"
        app:layout_constraintBottom_toTopOf="@+id/contatti_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatti_mail2" />

</androidx.constraintlayout.widget.ConstraintLayout>